@@ -9,6 +9,7 @@ Unreleased:
     * Use process start time hashed with the process id as a unique process
       identifier, allowing multiple independent users of the SDK in the same
       process to interleave their events on shared tracks.
+    * Record process and thread names into the trace.
 
 
 v12.1 - 2021-02-01:
